objects/Bot_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>AppointmentDate__c</fullName>
        <label>AppointmentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppointmentSlot__c</fullName>
        <label>AppointmentSlot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bot Appointments</relationshipLabel>
        <relationshipName>Bot_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobType__c</fullName>
        <label>JobType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>BreakAndFix</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bot Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>AppointmentNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>